syntax = "proto3";

option csharp_namespace = "DeltaTre.Search.Presentation.Rpc";

package wordservice;

service WordService {
	rpc Find(SearchRequest) returns (SearchResponse);
	rpc Update(UpdateRequest) returns (UpdateResponse);
}

message SearchRequest {
	string word = 1;
}

message SearchResponse {
	string word = 1;
	bool found = 2;
}

message UpdateRequest {
	repeated string word = 1;
}

message UpdateResponse {
	bool success = 1;
}